--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,13 @@
 .bottom-nav-btn {
-  padding: 0px 30px;
+  padding: 0px 20px;
   transition: background-color 0.5s, color 1.5s;
 }
+
+.btn-chip {
+  padding: 0.1rem 0.5rem !important;
+  line-height: 1.1;
+  font-size: 0.75rem;
+}
+
 
 
