-cambio de arquitectura -centralización de constantes y definiciones de configuraciones de paginas y modales

--- a/components/confirm-delete/confirm-delete.html
+++ b/components/confirm-delete/confirm-delete.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="confirmDeleteModal" tabindex="-1">
+<div class="modal fade" id="confirm-delete" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
 
