--- a/components/btn-add/btn-add.html
+++ b/components/btn-add/btn-add.html
@@ -1,6 +1,6 @@
 <!-- Botones Add -->
 <div
-  id="moduleActionButtons"
+  id="control-btn-add"
   class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center d-non"
   style="width: 40px; height: 40px"
 >
