--- a/components/date-filter/date-filter.html
+++ b/components/date-filter/date-filter.html
@@ -1,6 +1,6 @@
 <!-- Filtro de fecha -->
 <input
   type="date"
-  id="moduleFilterDate"
+  id="control-date-filter"
   class="form-control form-control-sm rounded-pill w-100 d-non"
 />
