--- a/components/list-counter/list-counter.html
+++ b/components/list-counter/list-counter.html
@@ -1,4 +1,4 @@
 <!-- Contador -->
-<div id="list-counter" class="text-muted small px-1 flex-grow-1">
+<div id="control-list-counter" class="text-muted small px-1 flex-grow-1">
   0 de 0 elementos
 </div>
