--- a/components/order-by/order-by.html
+++ b/components/order-by/order-by.html
@@ -1,13 +1,13 @@
 <!-- Control de ordenamiento -->
-<div class="w-100 d-non" id="moduleSortContainer">
+<div class="w-100 d-non" id="control-order-by-container">
   <div
     class="input-group input-group-sm rounded-pill overflow-hidden border h-100"
   >
-    <select class="form-select border-0 rounded-0" id="moduleOrderBy">
+    <select class="form-select border-0 rounded-0" id="control-order-by">
       <option value="" disabled selected>Ordenar…</option>
     </select>
-    <button class="btn btn-primary border-0 rounded-0" id="moduleOrderDir">
-      <i class="bi bi-sort-alpha-down"></i>
+    <button class="btn btn-primary border-0 rounded-0" id="control-order-dir">
+      <i class="bi bi-sort-alpha-down" id="control-order-dir-icon"></i>
     </button>
   </div>
 </div>
