--- a/components/search-input/search-input.html
+++ b/components/search-input/search-input.html
@@ -1,6 +1,6 @@
 <!-- Buscador -->
 <div
-  id="moduleSearchContainer"
+  id="control-search-input-container"
   class="input-group input-group-sm rounded-pill overflow-hidden border"
 >
   <span class="input-group-text bg-primary text-white border-0 px-3">
@@ -8,13 +8,13 @@
   </span>
   <input
     type="text"
-    id="moduleSearchInput"
+    id="control-search-input"
     class="form-control border-0 rounded-0"
     placeholder="Buscar..."
   />
   <button
     class="btn btn-link btn-sm text-muted border-0 px-2 d-none"
-    id="moduleClearSearch"
+    id="control-clear-search"
     type="button"
   >
     <i class="bi bi-x-circle"></i>
