--- a/components/btn-clear-filters/btn-clear-filters.html
+++ b/components/btn-clear-filters/btn-clear-filters.html
@@ -1,7 +1,7 @@
 <!-- Botón limpiar filtros (siempre visible) -->
 <button
   class="btn btn-secondary rounded-pill btn-chip w-auto"
-  id="btn-clear-filters"
+  id="control-btn-clear-filters"
   type="button"
 >
   <i class="bi bi-funnel"></i> Limpiar filtros
